@@ -140,15 +140,11 @@
 	<Extension path = "/SharpDevelop/Workbench/ProjectServiceExtensions">
 		<Class id = "ExtraSteps" class = "CBinding.CProjectServiceExtension"/>
 	</Extension>
-	<!--
+
 	<Extension path = "/MonoDevelop/Workbench/TextEditorExtensions">
 		<Class class = "CBinding.CTextEditorExtension" />
 	</Extension>
-	-->
-	<Extension path = "/AddIns/DefaultTextEditor/Formatters">
-		<Class id = "cpp" class = "CBinding.CFormattingStrategy"/>
-	</Extension>
-	
+
 	<Extension path = "/SharpDevelop/Workbench/SerializableClasses">
 		<DataType class = "CBinding.CCompilationParameters"/>
 		<DataType class = "CBinding.CProjectConfiguration"/>
